# FHE-Rework

./: BFVBenchmarker.cpp  CKKSBenchmarker.cpp  CMakeLists.txt  FHEReliabilitySim.cpp  README.md  main.cpp
benchmarker-testing/: BFVBenchmarker.cpp  CKKSBenchmarker.cpp
lib/: Plotter.h  Utils.cpp
rework-fhe-reliability/: FHECircuitDepthAnalyzer.cpp  FHECircuitDepthAnalyzer.h  FHEReliability.cpp  FHEReliability.h  FT_FHEReliability.cpp  LinearRegressionModel.cpp  LinearRegressionModel.h
